# 3DsMax-XplnObj

./: .gitignore  CMAKE_SDK_DETECTION.md  CMakeLists.txt
cmake/: Sts3dmaxTarget.cmake  StsConan.cmake
